--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -297,6 +297,25 @@ This allows for stable modules to stay numbered as they are (since they are not 
 changing), while those under more active development can be pushed out as needed. At
 the moment, most of the “current” modules are at version number 3. Some have not really
 changed from 2.1, while work on version 4 of selected modules is already underway.</p>
+		
+		<p><b>Document Object Model</b><br>Our ability to manipulate and create webpages consistently across formats comes from
+the document object model API, typically referred to as DOM. This API defines the order
+and structure of document files as well as how the file is manipulated to create, edit, or
+remove contents.</p>
+		
+		<p>The DOM is built to be language and platform independent so any software or program-
+ming language can use it to interface with documents. It defines the interface methods and
+object types that represent elements of documents, the semantics and behavior of attributes
+of those objects, and also defines how they relate to one another. The DOM, effectively,
+is what gives rise to the tags we are about to study below. Languages that use the DOM,
+however, are not required to include all of its features, and may generate additional features
+of their own.</p>
+		<p>Figure 20 depicts an example of a document’s model in tree format, with nested ele-
+ments appearing to the right and below their parents. In this example, we are shown an
+HTML page with a section for the head and the body, which includes a page title and a
+link as its contents. This structure provides the ability for us to traverse, or move around the
+document, by referring to an object’s name or attribute.</p>
+				
 	</div>
 	<!-- week1 end -->
 		
