--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -34,11 +34,11 @@
 	<div>
 		<h2 id="week1">Week 1</h2>
 		<h3 id="welcome">Welcome</h3>
-		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style"><b>this</b></a>.</p>
-		<p><a href="https://www.youtube.com/watch?v=M9ebkjWU6Z4" alt="history  of the internet">History Channel - The Invention of the Internet</a></p>
+		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html"><b>this</b></a>.</p>
+		<p><a href="https://www.youtube.com/watch?v=M9ebkjWU6Z4">History Channel - The Invention of the Internet</a></p>
 		<p><a href="http://home.cern/topics/birth-web">The birth of the web</a></p>
 		<p><a href="http://info.cern.ch/hypertext/WWW/TheProject.html">World Wide Web</a></p>
-		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
+		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
 		
 		<p><b>Chapter 1: Brief History of the Internet</b></p>
 			<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
@@ -58,7 +58,7 @@
 			Interacting with the computer meant reserving time on the equipment and traveling to
 			where it was. Most machines were owned by universities, large corporations, or government
 			organizations due to the staffing demands, size, and cost to acquire and maintain them. The
-			image below depicts the <a href="https://en.wikipedia.org/wiki/UNIVAC_I" alt="Univac 1">UNIVAC 1</a>, a system used by the United States Census Bureau
+			image below depicts the <a href="https://en.wikipedia.org/wiki/UNIVAC_I">UNIVAC 1</a>, a system used by the United States Census Bureau
 			and other large organizations like universities. One of the fastest machines at the time, it
 			could perform roughly 1000 calculations per second.</p>
 		
@@ -80,7 +80,7 @@
 			together for the first time. In order to standardize the way networked systems communicated, 
 			the Transfer Control Protocol/Internetwork Protocol (TCP/IP) was created. As
 			various network systems migrated to this standard, they could then communicate with any
-			network using the protocol. <b>The <a href="https://en.wikipedia.org/wiki/Internet" alt="Internet history">Internet</a> was born</b>.</p>
+			network using the protocol. <b>The <a href="https://en.wikipedia.org/wiki/Internet">Internet</a> was born</b>.</p>
 		
 			<p>Email was soon to follow, as users of the networks were interested in the timely transmission 
 			and notification of messages. This form of messaging fit one of their initial goals.
