add details tag for chapter 1

--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -40,7 +40,10 @@
 		<p><a href="http://info.cern.ch/hypertext/WWW/TheProject.html">World Wide Web</a></p>
 		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
 		
+		<details>
+			<summary>
 		<p><b>Chapter 1: Brief History of the Internet</b></p>
+			</summary>
 			<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
 			computers was under development by both government and university researchers looking
 			for a better means to communicate and share research. The military at the time relied in
@@ -91,6 +94,7 @@
 			between systems progressed at a rate similar to the calculative power of the computers we
 			saw earlier. This brings us to where we are today; able to watch full-length movies, streamed
 			in high quality right to our phones and computers, even while riding in a car.</p>
+		</details>
 		
 		<p><b>Chapter 4: Network Basics</b></p>
 			<p><b>IP Addresses</b><br>An IP (Internet Protocol) address is a unique code that identifies a piece of equipment
