--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -42,7 +42,7 @@
 		
 		<details>
 			<summary>
-		<p><b>Chapter 1: Brief History of the Internet</b></p>
+		<b>Chapter 1: Brief History of the Internet</b>
 			</summary>
 			<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
 			computers was under development by both government and university researchers looking
