--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -96,7 +96,10 @@
 			in high quality right to our phones and computers, even while riding in a car.</p>
 		</details>
 		
-		<p><b>Chapter 4: Network Basics</b></p>
+		<details>
+			<summary>
+		<b>Chapter 4: Network Basics</b>
+			</summary>
 			<p><b>IP Addresses</b><br>An IP (Internet Protocol) address is a unique code that identifies a piece of equipment
 			connected to a network. These addresses are used in messages between network devices like
 			the network or wireless card in your computer, the equipment from your ISP (internet
@@ -204,7 +207,12 @@ services and often emphasize their best features. Price competition makes for re
 affordable hosting for those who are not looking for dedicated servers and are comfortable
 with sharing their (virtual) server resources with other customers.</p>
 		
-			<p><b>Chapter 7: Markup Languages</b></p>	
+		</details>
+		
+		<details>
+			<summary>
+		<b>Chapter 7: Markup Languages</b>	
+			</summary>
 			
 			<p>Document markup is a notation method that defines how particular pieces of information
 are meant to be formatted. The term comes from the practice of marking up manuscripts to
@@ -319,7 +327,8 @@ ments appearing to the right and below their parents. In this example, we are sh
 HTML page with a section for the head and the body, which includes a page title and a
 link as its contents. This structure provides the ability for us to traverse, or move around the
 document, by referring to an object’s name or attribute.</p>
-				
+		</details>
+		
 	</div>
 	<!-- week1 end -->
 		
