--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -329,6 +329,8 @@ link as its contents. This structure provides the ability for us to traverse, or
 document, by referring to an object’s name or attribute.</p>
 		</details>
 		
+		<p><a href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
+		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
 	</div>
 	<!-- week1 end -->
 		
