--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -333,6 +333,12 @@ document, by referring to an object’s name or attribute.</p>
 		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
 	</div>
 	<!-- week1 end -->
+	
+	<!-- week2 begin -->
+	<div>
+		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
+	</div>
+	<!-- week2 end -->
 		
 	</div>
 	<!-- section end -->
