--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -331,9 +331,13 @@ document, by referring to an object’s name or attribute.</p>
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a> (Optional but oh so good)</p>
 		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
+		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
+		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
+		
 	</div>
 	<!-- week1 end -->
 	<hr>
+		
 	<!-- week2 begin -->
 	<div>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
