--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -349,10 +349,7 @@ document, by referring to an object’s name or attribute.</p>
 	
 	
 	<footer id="footer">
-		<div class="footer__inner">
-			<div></div>
-			<div></div>
-		</div>
+		<small>&copy; Yevgen</small>
 	</footer>
 </body>
 </html>
