--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -333,7 +333,7 @@ document, by referring to an object’s name or attribute.</p>
 		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
 		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
 		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
-		
+		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
 	</div>
 	<!-- week1 end -->
 	<hr>
