--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -10,7 +10,7 @@
 	
 	<div class="header__wrapper">
 	<header id="header">
-		<div class="container">
+		
 			<h1>Introduction to HTML5 by University of Michigan</h1>
 				
 			<nav>
@@ -22,7 +22,7 @@
 					</li>
 				</ul>
 			</nav>
-		</div>
+		
 	</header>
 	</div>
 	
@@ -31,9 +31,9 @@
 	<div>
 		
 	<!-- week1 start -->
-	<div>
-		<h2 id="week1">Week 1</h2>
-		<h3 id="welcome">Welcome</h3>
+	<section id="week1">
+		<h2>Week 1</h2>
+		<h3>Welcome</h3>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html"><b>this</b></a>.</p>
 		<p><a href="https://www.youtube.com/watch?v=M9ebkjWU6Z4">History Channel - The Invention of the Internet (Youtube)</a></p>
 		<p><a href="http://home.cern/topics/birth-web">The birth of the web (http://home.cern/topics/birth-web)</a></p>
@@ -334,14 +334,14 @@ document, by referring to an object’s name or attribute.</p>
 		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
 		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
 		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
-	</div>
+	</section>
 	<!-- week1 end -->
 	<hr>
 		
 	<!-- week2 begin -->
-	<div>
+	<section>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
-	</div>
+	</section>
 	<!-- week2 end -->
 		
 	</div>
