--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -34,7 +34,7 @@
 	<!-- week1 start -->
 	<section id="week1">
 		<h2>Week 1</h2>
-		<h3>Welcome</h3>
+		<h3 id="welcome">Welcome</h3>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html"><b>this</b></a>.</p>
 		<p><a href="https://www.youtube.com/watch?v=M9ebkjWU6Z4">History Channel - The Invention of the Internet (Youtube)</a></p>
 		<p><a href="http://home.cern/topics/birth-web">The birth of the web (http://home.cern/topics/birth-web)</a></p>
