--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -335,7 +335,7 @@
 		<p><a href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a> (Optional but oh so good)</p>
 		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
 		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
-		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
+		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a>(dev.opera.com)</p>
 		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
 		
 		<h3 id="history">History and Evolution</h3>
