--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -339,6 +339,7 @@
 		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
 		
 		<h3 id="history">History and Evolution</h3>
+		<p><a title="Youtube" href="https://www.youtube.com/watch?v=VANORrzKX50">The browser wars</a> (Optional)</p>
 	</section>
 	<!-- week1 end -->
 	<hr>
