--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -332,14 +332,15 @@
 			document, by referring to an object’s name or attribute.</p>
 		</details>
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
-		<p><a href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a> (Optional but oh so good)</p>
-		<p><a href="http://www.w3schools.com/tags/">HTML Tags (w3schools.com/tags)</a></p>
+		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
+		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/">HTML Tags</a></p>
 		<p><a href="https://boagworld.com/dev/semantic-code-what-why-how/">Semantic code: What? Why? How?</a></p>
-		<p><a href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a>(dev.opera.com)</p>
+		<p><a title="dev.opera.com" href="https://dev.opera.com/articles/new-structural-elements-in-html5/">New Structural Elements in HTML5</a></p>
 		<p><a href="http://www.copypastecharacter.com/">List of character encodings</a></p>
 		
 		<h3 id="history">History and Evolution</h3>
-		<p><a title="Youtube" href="https://www.youtube.com/watch?v=VANORrzKX50">The browser wars</a> (Optional)</p>
+		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=VANORrzKX50">The browser wars</a></p>
+		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 	</section>
 	<!-- week1 end -->
 	<hr>
