--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -36,9 +36,9 @@
 		<h2>Week 1</h2>
 		<h3 id="welcome">Welcome</h3>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html"><b>this</b></a>.</p>
-		<p><a href="https://www.youtube.com/watch?v=M9ebkjWU6Z4">History Channel - The Invention of the Internet (Youtube)</a></p>
-		<p><a href="http://home.cern/topics/birth-web">The birth of the web (http://home.cern/topics/birth-web)</a></p>
-		<p><a href="http://info.cern.ch/hypertext/WWW/TheProject.html">World Wide Web (info.cern.ch)</a></p>
+		<p><a title="Youtube" href="https://www.youtube.com/watch?v=M9ebkjWU6Z4">History Channel - The Invention of the Internet</a></p>
+		<p><a title="http://home.cern/topics/birth-web" href="http://home.cern/topics/birth-web">The birth of the web</a></p>
+		<p><a title="info.cern.ch" href="http://info.cern.ch/hypertext/WWW/TheProject.html">World Wide Web</a></p>
 		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
 		
 		<details>
