--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -341,6 +341,9 @@
 		<h3 id="history">History and Evolution</h3>
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=VANORrzKX50">The browser wars</a></p>
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
+		
+		<h3 id="how-it-works">How it Works<h3>
+			<img url="https://www.dropbox.com/s/qsrubizprb22mxe/How-it-Works.gif?dl=0">
 	</section>
 	<!-- week1 end -->
 	<hr>
