--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -19,7 +19,7 @@
 					<ul>
 						<li><a href="#welcome">Welcome</a></li>
 						<li><a href="#history">History and Evolution</a></li>
-						<li><a hrefid="#how-it-works">How it Works</a><li>
+						<li><a href="#how-it-works">How it Works</a><li>
 					</ul>
 					</li>
 				</ul>
