--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -344,7 +344,7 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works<h3>
-			<img src="https://www.dropbox.com/s/qsrubizprb22mxe/How-it-Works.gif?dl=0" alt="How it Works">
+			<img src="How-it-Works.gif" alt="How it Works">
 	</section>
 	<!-- week1 end -->
 	<hr>
