--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -20,6 +20,7 @@
 						<li><a href="#welcome">Welcome</a></li>
 						<li><a href="#history">History and Evolution</a></li>
 						<li><a href="#how-it-works">How it Works</a><li>
+						<li><a>Tools and Tips</a></li>
 					</ul>
 					</li>
 				</ul>
