--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -345,7 +345,7 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works<h3>
-			<img src="How-it-Works.gif" alt="How it Works">
+			<img src="How-it-Works.gif" alt="How it Works" height="142" width="142">
 	</section>
 	<!-- week1 end -->
 	<hr>
