--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -11,7 +11,7 @@
 	<div class="header__wrapper">
 	<header id="header">
 		
-		<a href="https://www.coursera.org/learn/html/home/welcome"><h1>Introduction to HTML5 by University of Michigan</h1></a>
+		<h1><a href="https://www.coursera.org/learn/html/home/welcome">Introduction to HTML5 by University of Michigan</a></h1>
 				
 			<nav>
 				<ul>
