--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 	</form>
 	<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
 	<br><br>
+	<a href="dating-website.html">Dating Website</a>
 	<a href="part-2.html">Color game</a>
 	<br>
 	<a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a>
