--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="My personal draft">
+	<meta name="author" content="Yevgen Farasevych">
+	<title>My stuff</title>
 	
 	<style type="text/css">		
 	</style>
