--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	
-		
-	<br>
+	<h2>MOOC</h2>	
+	
 	<a href="dating-website.html">Dating Website</a>
 	<a href="part-2.html">Color game</a>
 	<br>
