--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
 	
-	<h2>MOOC</h2>	
-	
-	<a href="dating-website.html">Dating Website</a>
-	<a href="part-2.html">Color game</a>
-	<br>
-	<a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a>
+	<ul><h2>MOOC</h2>	
+		<ul>
+		<li>FULL STACK WEB DEVELOPMENT - The Hong Kong University of Science and Technology</li>
+		<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>
+			<a href="dating-website.html">Dating Website</a>
+			<a href="part-2.html">Color game</a>
+		</ul>
+		
+	</ul>
 </body>
 </html>
