--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 	
 	<ul><h2>MOOC</h2>	
 		<ul>
-		<li>FULL STACK WEB DEVELOPMENT - The Hong Kong University of Science and Technology</li>
+		<li>FULL STACK WEB DEVELOPMENT - The Hong Kong University of Science and Technology
+			<ul>
+			<li><a href="dating-website.html">Dating Website</a></li>
+			<li><a href="part-2.html">Color game</a></li>
+			</ul>			
+		</li>
 		<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>
-			<a href="dating-website.html">Dating Website</a>
-			<a href="part-2.html">Color game</a>
+				
 		</ul>
 		
 	</ul>
