--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<ul><h2>MOOC</h2>	
 		<ul>
-		<li>FULL STACK WEB DEVELOPMENT - The Hong Kong University of Science and Technology
+			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 			<ul>
 			<li><a href="dating-website.html">Dating Website</a></li>
 			<li><a href="part-2.html">Color game</a></li>
