--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 			<ul>
 			<li><a href="dating-website.html">Dating Website</a></li>
-			<li><a href="part-2.html">Color game</a></li>
+			<li><a href="color-game.html">Color game</a></li>
 			</ul>			
 		</li>
 		<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>
