--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -22,6 +22,7 @@
 						<li><a href="#how-it-works">How it Works</a></li>
 						<li>Tools and Tips</li>
 					</ul>
+					<li><a href="#week2">Week Two</a>
 					</li>
 				</ul>
 			</nav>
@@ -352,6 +353,8 @@
 		
 	<!-- week2 begin -->
 	<section>
+		<h2 id="week2">Week 2</h2>
+		<h3 id="dom">The Document Object Model (DOM)</h3>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
 	</section>
 	<!-- week2 end -->
