--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -347,6 +347,7 @@
 		
 		<h3 id="how-it-works">How it Works</h3>
 			<img src="How-it-Works.gif" alt="How it Works" height="70%" width="70%">
+			<iframe width="480" height="360" src="http://s1126.photobucket.com/user/Yevgen_Farasevych/embed/slideshow/MOOCs"></iframe>
 	</section>
 	<!-- week1 end -->
 	<hr>
