--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -347,7 +347,7 @@
 		
 		<h3 id="how-it-works">How it Works</h3>
 			<img src="How-it-Works.gif" alt="How it Works" height="70%" width="70%">
-			<iframe width="480" height="360" src="http://s1126.photobucket.com/user/Yevgen_Farasevych/embed/slideshow/MOOCs"></iframe>
+			<a href="http://s1126.photobucket.com/user/Yevgen_Farasevych/media/MOOCs/How-it-Works_zps8cetegck.gif.html" target="_blank"><img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/How-it-Works_zps8cetegck.gif" border="0" alt=" photo How-it-Works_zps8cetegck.gif"/></a>
 	</section>
 	<!-- week1 end -->
 	<hr>
