--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -346,8 +346,7 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="How-it-Works.gif" alt="How it Works" height="70%" width="70%">
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/How-it-Works_zps8cetegck.gif" border="0" alt=" photo How-it-Works_zps8cetegck.gif" height="20%" width="20%"/>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/How-it-Works_zps8cetegck.gif" alt="photo How-it-Works" height="70%" width="70%"/>
 	</section>
 	<!-- week1 end -->
 	<hr>
