--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -346,7 +346,8 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/How-it-Works_zps8cetegck.gif" alt="photo How-it-Works" height="70%" width="70%"/>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introduction%20to%20HTML5%20by%20University%20of%20Michigan/How-it-Works_zps8cetegck.gif" alt="photo How-it-Works" height="70%" width="70%"/>
+			
 	</section>
 	<!-- week1 end -->
 	<hr>
