--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -346,7 +346,7 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="photo How-it-Works" height="70%" width="70%"/>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" height="70%" width="70%">
 			
 	</section>
 	<!-- week1 end -->
@@ -356,6 +356,9 @@
 	<section>
 		<h2 id="week2">Week 2</h2>
 		<h3 id="dom">The Document Object Model (DOM)</h3>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" height="70%" width="70%">
+		
+		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
 	</section>
 	<!-- week2 end -->
