--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -22,7 +22,11 @@
 						<li><a href="#how-it-works">How it Works</a></li>
 						<li>Tools and Tips</li>
 					</ul>
+					</li>
 					<li><a href="#week2">Week Two</a>
+					<ul>
+						<li><a href="#dom">The Document Object Model (DOM)</a></li>
+					</ul>
 					</li>
 				</ul>
 			</nav>
