--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 	<ul><h2>MOOC</h2>	
 		<ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
-			<ul>
-			<li><a href="dating-website.html">Dating Website</a></li>
-			<li><a href="color-game.html">Color game</a></li>
-			</ul>			
-		</li>
-		<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>
-				
-		</ul>
+				<ul>
+				<li><a href="dating-website.html">Dating Website</a></li>
+				<li><a href="color-game.html">Color game</a></li>
+				</ul>			
+			</li>
+			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
+		</ul>		
+	</ul>
+	<ul><h2>WEB dev log</h2>
 		
 	</ul>
 </body>
