--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -360,7 +360,7 @@
 	<section>
 		<h2 id="week2">Week 2</h2>
 		<h3 id="dom">The Document Object Model (DOM)</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" height="70%" width="70%">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" title="The Document Object Model (DOM)"height="70%" width="70%">
 		
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
