add title to How it Works img

--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -350,7 +350,7 @@
 		<p><a title="Youtube optional" href="https://www.youtube.com/watch?v=-c8iWUh3Sv4&app=desktop">The origins of MOSAIC</a></p>
 		
 		<h3 id="how-it-works">How it Works</h3>
-			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" height="70%" width="70%">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--How-it-Works_zpshvnyom2t.gif" alt="picture How-it-Works" title="How it Works" height="70%" width="70%">
 			
 	</section>
 	<!-- week1 end -->
