--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -26,6 +26,7 @@
 					<li><a href="#week2">Week Two</a>
 					<ul>
 						<li><a href="#dom">The Document Object Model (DOM)</a></li>
+						<li><a href="#html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</a></li>
 					</ul>
 					</li>
 				</ul>
@@ -361,7 +362,7 @@
 		<h2 id="week2">Week 2</h2>
 		<h3 id="dom">The Document Object Model (DOM)</h3>
 			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" title="The Document Object Model (DOM)"height="70%" width="70%">
-		
+		<h3 id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</h3>
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
 	</section>
