--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -363,8 +363,14 @@
 		<h3 id="dom">The Document Object Model (DOM)</h3>
 			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" alt="picture The Document Object Model" title="The Document Object Model (DOM)"height="70%" width="70%">
 		<h3 id="html5elements">HTML5 Elements - Tags, Syntax, Semantics, and Templates</h3>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Display_zpsfvwy3btm.gif" alt="picture of block and inline elevents" title="block and inline elevents" height="70%" width="70%">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Images_zpsqdke2xhp.gif" alt="picture of image tag" title="image tag" height="70%" width="70%">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--Special-Entities_zpssx2o0via.gif" alt="picture Special Entities" title="Special Entities" height="70%" width="70%">
+		
+		
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
+			
 	</section>
 	<!-- week2 end -->
 		
