--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -339,6 +339,36 @@
 			link as its contents. This structure provides the ability for us to traverse, or move around the
 			document, by referring to an object’s name or attribute.</p>
 		</details>
+		
+		<details>
+			<summary>
+		<b>Chapter 9: Page Layout</b>
+			</summary>
+			<p><b>Tags, Attributes</b><br>In order to add content to our page, we will set up our file with some basic structure. First,
+			we will use tags to identify information about where parts of our page start and end. We
+				will do this by using our first set of tags, html> and /html>. We refer to these as a set
+			because both use the same predefined word (HTML), and the latter uses the backslash (/)
+			to indicate that it marks the close of that tag set. The act of placing a set of tags around
+			content and other code is often referred to as “wrapping” what is between the tags. This is
+			a good way to create a mental picture of what you are doing.
+			Next, we will put in a few more tags and then save our file and see some results. In
+			between (typically referred to this as “inside”) your HTML tags, add an empty set of tags
+			labeled head, and another labeled body. Then create two more sets labeled header and footer
+			inside your body tags. Your resulting file should look like this:
+			</p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
+			
+		</details>
+		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
 		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/">HTML Tags</a></p>
