--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -355,6 +355,17 @@
 			between (typically referred to this as “inside”) your HTML tags, add an empty set of tags
 			labeled head, and another labeled body. Then create two more sets labeled header and footer
 			inside your body tags. Your resulting file should look like this:
+				<code><html>
+					<head>
+					</head>
+					<body>
+					<header>
+					</header>
+					<footer>
+					</footer>
+					</body>
+					</html>
+				</code>
 			</p>
 			
 			<p></p>
