--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -354,8 +354,8 @@
 			Next, we will put in a few more tags and then save our file and see some results. In
 			between (typically referred to this as “inside”) your HTML tags, add an empty set of tags
 			labeled head, and another labeled body. Then create two more sets labeled header and footer
-			inside your body tags. Your resulting file should look like this:
-				<code><html>
+				inside your body tags. Your resulting file should look like this:</p>
+				<code>	<html>
 					<head>
 					</head>
 					<body>
@@ -366,7 +366,7 @@
 					</body>
 					</html>
 				</code>
-			</p>
+			
 			
 			<p></p>
 			
